apps/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  namespace: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: setup
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard-home
spec:
  selector:
    app: adguard-home
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
